// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageWallet has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <img
                class="icon"
                src="~assets/images/cosmos-logo.png"
              />
              <div
                class="total-atoms"
              >
                <div
                  class="h3"
                >
                  Total Steak
                </div>
                <div
                  class="h2"
                >
                  123
                </div>
              </div>
              <div
                class="unstaked-atoms"
              >
                <div
                  class="h3"
                >
                  Unstaked Steak
                </div>
                <div
                  class="h2"
                >
                  ---
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="bottom"
            >
              <div
                class="address"
              >
                
              </div>
              <div
                class="success"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                  <a
                    class="back"
                    disabled="disabled"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    id="signOut-btn"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <modal-search
      type="balances"
    />
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li tm-li-receive"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-label"
              >
                <div
                  class="tm-li-title"
                >
                  tb1zgatc3tdauv2m0uf
                </div>
                <div
                  class="tm-li-subtitle"
                >
                  
                </div>
              </div>
              <button
                class="tm-btn btn-receive"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    file_download
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Receive
                  </span>
                </span>
              </button>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="part-available-balances"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Available Balances
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <!---->
          <a
            class="tm-li tm-li-link tm-li-balance"
            href="#/wallet/send/FERMION"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  FERMION
                </div>
                <div
                  class="tm-li-dd"
                >
                  456
                </div>
              </div>
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <a
            class="tm-li tm-li-link tm-li-balance"
            href="#/wallet/send/STEAK"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  STEAK
                </div>
                <div
                  class="tm-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
          <!---->
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="part-staked-balances"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Staked Balances
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <a
            class="tm-li tm-li-link"
            href="#/staking"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Steak
                </div>
                <div
                  class="tm-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Stake
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageWallet should filter the balances 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
        <!---->
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <img
                class="icon"
                src="~assets/images/cosmos-logo.png"
              />
              <div
                class="total-atoms"
              >
                <div
                  class="h3"
                >
                  Total Steak
                </div>
                <div
                  class="h2"
                >
                  123
                </div>
              </div>
              <div
                class="unstaked-atoms"
              >
                <div
                  class="h3"
                >
                  Unstaked Steak
                </div>
                <div
                  class="h2"
                >
                  ---
                </div>
              </div>
              <!---->
              <!---->
            </div>
            <div
              class="bottom"
            >
              <div
                class="address"
              >
                
              </div>
              <div
                class="success"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                  </a>
                  <a
                    class="back"
                    disabled="disabled"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    id="signOut-btn"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <modal-search
      type="balances"
    />
    <section
      class="tm-part"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Your Address
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <div
            class="tm-li tm-li-receive"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-label"
              >
                <div
                  class="tm-li-title"
                >
                  tb1zgatc3tdauv2m0uf
                </div>
                <div
                  class="tm-li-subtitle"
                >
                  
                </div>
              </div>
              <button
                class="tm-btn btn-receive"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    file_download
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Receive
                  </span>
                </span>
              </button>
            </div>
          </div>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="part-available-balances"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Available Balances
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <!---->
          <a
            class="tm-li tm-li-link tm-li-balance"
            href="#/wallet/send/STEAK"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  STEAK
                </div>
                <div
                  class="tm-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Send
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <section
      class="tm-part"
      id="part-staked-balances"
    >
      <div
        class="tm-part-container"
      >
        <header
          class="tm-part-header"
        >
          <div
            class="tm-part-header-container"
          >
            <div
              class="tm-part-title h5"
            >
              Staked Balances
            </div>
            <menu
              class="tm-part-menu"
            />
          </div>
        </header>
        <main
          class="tm-part-main"
        >
          <a
            class="tm-li tm-li-link"
            href="#/staking"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Steak
                </div>
                <div
                  class="tm-li-dd"
                >
                  123
                </div>
              </div>
              <button
                class="tm-btn"
              >
                <span
                  class="tm-btn__container tm-btn__icon-right tm-btn--primary"
                >
                  <i
                    aria-hidden="true"
                    class="tm-btn__icon material-icons"
                  >
                    chevron_right
                  </i>
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    Stake
                  </span>
                </span>
              </button>
            </div>
          </a>
        </main>
      </div>
    </section>
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;
